# DiplomaThesis

./: .gitignore  README.md
DESSEQ_FEEDER/: test_01.ods
EMC/: specifikace_zarizeni_pro_EMC.csv  (+1 more)
FW/: CMakeLists.txt  flash_openocd.cfg
FW/cmake/: ARMMCU.cmake  CompilerWarnings.cmake  PrintSize.cmake  ToolchainARMCortex.cmake
FW/lib/Device_L10/include/component/: adc.h
FW/lib/Device_SAME51/include/: same51j20a.h
FW/lib/Device_SAME51/linker/: same51g18a_flash.ld  same51g18a_sram.ld  same51j18a_flash.ld  same51j20a_flash.ld  same51j20a_sram.ld  same51n20a_flash.ld
FW/lib/fmt_minimal/: .gitrepo
FW/lib/fmt_minimal/include/fmt/: core.h  format-inl.h  format.h
FW/lib/fmt_minimal/src/: format.cc
FW/src/: main.cpp
FW/src/aron/: constant_expressions.hpp  flash_operations.hpp  h_interp.hpp  init.hpp  interupt_settings.hpp  irq_handlers.hpp  structs.hpp  system_settings.hpp
FW/src/aron/communication/: bus_activity.cpp  bus_activity.hpp  command_handler.cpp  command_handler.hpp  command_sequencer.cpp  command_sequencer.hpp  communication.cpp  communication.hpp
FW/src/aron/interface/: interface.cpp  interface.hpp
FW/src/aron/output/: current_source.cpp  current_source.hpp  dds.cpp  dds.hpp  position_control.cpp  position_control.hpp
FW/src/aron/sw_timers/: timer_manager.cpp  timer_manager.hpp
FW/src/aron/temp/: temp_meassure.cpp  temp_meassure.hpp
FW/src/chrono/: Periodic_timer.hpp  Stopwatch.hpp  Timeout_timer.hpp  Wait.cpp  Wait.hpp  chrono.hpp  chrono_atsam.hpp
FW/src/drivers/can/: can_interface.hpp  can_same5x.cpp  can_same5x.hpp
FW/src/drivers/can/transcievers/: tcan334.h
FW/src/drivers/gpio/: gpio_interface.hpp  gpio_same5x.hpp
FW/src/drivers/sam5x/: gclk.hpp  mclk.hpp  oscctrl.hpp
FW/src/drivers/systick/: systick.cpp  systick.hpp
FW/src/drivers/usart/: usart_blocking_same5x.cpp  usart_blocking_same5x.hpp  usart_interface.hpp
FW/src/utils/: adc_dac_utils.hpp  dummy_syscalls.cpp  fifo.hpp
FW/src/utils/logging/: Logger.hpp  LoggerCan.hpp  LoggerUart.hpp
FW/src/utils/pid/: pid.cpp  pid.hpp
HW/: 10V.kicad_sch  (+20 more)
(+159 files in other folders)
